storage/innobase/btr/btr0btr.cc
@@ -1240,8 +1240,6 @@ btr_write_autoinc(dict_index_t* index, ib_uint64_t autoinc, bool reset)
 static dberr_t btr_page_reorganize_low(page_cur_t *cursor, dict_index_t *index,
                                        mtr_t *mtr)
 {
-  const mtr_log_t log_mode= mtr->set_log_mode(MTR_LOG_NO_REDO);
-
   buf_block_t *const block= cursor->block;
 
   ut_ad(mtr->memo_contains_flagged(block, MTR_MEMO_PAGE_X_FIX));
@@ -1252,7 +1250,12 @@ static dberr_t btr_page_reorganize_low(page_cur_t *cursor, dict_index_t *index,
   ut_ad(index->is_dummy || block->page.id().page_no() != index->page ||
         !page_has_siblings(block->page.frame));
 
-  buf_block_t *old= buf_block_alloc();
+  buf_block_t *old= buf_LRU_get_free_block(false);
+  if (UNIV_UNLIKELY(!old))
+    return DB_OUT_OF_MEMORY;
+
+  const mtr_log_t log_mode= mtr->set_log_mode(MTR_LOG_NO_REDO);
+
   /* Copy the old page to temporary space */
   memcpy_aligned<UNIV_PAGE_SIZE_MIN>(old->page.frame, block->page.frame,
                                      srv_page_size);
@@ -1364,8 +1367,9 @@ static dberr_t btr_page_reorganize_low(page_cur_t *cursor, dict_index_t *index,
                 block->page.frame + PAGE_MAX_TRX_ID + PAGE_HEADER,
                 PAGE_DATA - (PAGE_MAX_TRX_ID + PAGE_HEADER)));
 
-  if (index->has_locking())
-    lock_move_reorganize_page(block, old);
+  const dberr_t err= index->has_locking()
+    ? lock_move_reorganize_page(block, old)
+    : DB_SUCCESS;
 
   /* Write log for the changes, if needed. */
   if (log_mode == MTR_LOG_ALL)
@@ -1492,7 +1496,7 @@ static dberr_t btr_page_reorganize_low(page_cur_t *cursor, dict_index_t *index,
 
   MONITOR_INC(MONITOR_INDEX_REORG_ATTEMPTS);
   MONITOR_INC(MONITOR_INDEX_REORG_SUCCESSFUL);
-  return DB_SUCCESS;
+  return err;
 }
 
 /*************************************************************//**
@@ -1841,17 +1845,20 @@ btr_root_raise_and_insert(
 
 		/* Update the lock table and possible hash index. */
 		if (index->has_locking()) {
-			lock_move_rec_list_end(
-				new_block, root,
-				page_get_infimum_rec(root->page.frame));
-		}
-
-		/* Move any existing predicate locks */
-		if (dict_index_is_spatial(index)) {
-			lock_prdt_rec_move(new_block, root_id);
-		} else {
 			btr_search_move_or_delete_hash_entries(
 				new_block, root);
+			*err = lock_move_rec_list_end(
+				new_block, root,
+				page_get_infimum_rec(root->page.frame));
+			if (UNIV_UNLIKELY(*err != DB_SUCCESS)) {
+				return nullptr;
+			}
+			if (index->is_spatial()) {
+				*err = lock_prdt_rec_move(new_block, root_id);
+				if (UNIV_UNLIKELY(*err != DB_SUCCESS)) {
+					return nullptr;
+				}
+			}
 		}
 	}
 
@@ -1893,7 +1900,10 @@ btr_root_raise_and_insert(
 	root page: we cannot discard the lock structs on the root page */
 
 	if (index->has_locking()) {
-		lock_update_root_raise(*new_block, root_id);
+		*err = lock_update_root_raise(*new_block, root_id);
+		if (UNIV_UNLIKELY(*err != DB_SUCCESS)) {
+			return nullptr;
+		}
 	}
 
 	/* Create a memory heap where the node pointer is stored */
@@ -2588,8 +2598,9 @@ btr_insert_into_right_sibling(
 	max_size = page_get_max_insert_size_after_reorganize(next_page, 1);
 
 	/* Extends gap lock for the next page */
-	if (is_leaf && cursor->index->has_locking()) {
-		lock_update_node_pointer(block, next_block);
+	if (is_leaf && cursor->index->has_locking()
+	    && lock_update_node_pointer(block, next_block) != DB_SUCCESS) {
+		return nullptr;
 	}
 
 	rec = page_cur_tuple_insert(
@@ -2992,13 +3003,15 @@ insert_empty:
 
 			/* Update the lock table and possible hash index. */
 			if (cursor->index->has_locking()) {
-				lock_move_rec_list_start(
+				btr_search_move_or_delete_hash_entries(
+					new_block, block);
+				*err = lock_move_rec_list_start(
 					new_block, block, move_limit,
 					new_page + PAGE_NEW_INFIMUM);
+				if (*err != DB_SUCCESS) {
+					return nullptr;
+				}
 			}
-
-			btr_search_move_or_delete_hash_entries(
-				new_block, block);
 
 			/* Delete the records from the source page. */
 
@@ -3010,7 +3023,7 @@ insert_empty:
 		right_block = block;
 
 		if (cursor->index->has_locking()) {
-			lock_update_split_left(right_block, left_block);
+			*err = lock_update_split_left(right_block, left_block);
 		}
 	} else {
 		/*		fputs("Split right\n", stderr); */
@@ -3041,12 +3054,14 @@ insert_empty:
 
 			/* Update the lock table and possible hash index. */
 			if (cursor->index->has_locking()) {
-				lock_move_rec_list_end(new_block, block,
-						       move_limit);
+				btr_search_move_or_delete_hash_entries(
+					new_block, block);
+				*err = lock_move_rec_list_end(new_block, block,
+							      move_limit);
+				if (*err != DB_FAIL) {
+					return nullptr;
+				}
 			}
-
-			btr_search_move_or_delete_hash_entries(
-				new_block, block);
 
 			/* Delete the records from the source page. */
 
@@ -3063,7 +3078,11 @@ insert_empty:
 		right_block = new_block;
 
 		if (cursor->index->has_locking()) {
-			lock_update_split_right(right_block, left_block);
+			*err = lock_update_split_right(right_block,
+						       left_block);
+			if (*err != DB_SUCCESS) {
+				return nullptr;
+			}
 		}
 	}
 
@@ -3364,16 +3383,20 @@ btr_lift_page_up(
 		/* Update the lock table and possible hash index. */
 
 		if (index->has_locking()) {
-			lock_move_rec_list_end(father_block, block,
-					       page_get_infimum_rec(page));
-		}
-
-		/* Also update the predicate locks */
-		if (dict_index_is_spatial(index)) {
-			lock_prdt_rec_move(father_block, block->page.id());
-		} else {
 			btr_search_move_or_delete_hash_entries(
 				father_block, block);
+			*err = lock_move_rec_list_end(
+				father_block, block, page + PAGE_NEW_INFIMUM);
+			if (*err != DB_SUCCESS) {
+				return nullptr;
+			}
+			if (index->is_spatial()) {
+				*err = lock_prdt_rec_move(father_block,
+							  block->page.id());
+				if (*err != DB_SUCCESS) {
+					return nullptr;
+				}
+			}
 		}
 	}
 
@@ -3383,7 +3406,10 @@ btr_lift_page_up(
 		if (index->is_spatial()) {
 			lock_sys.prdt_page_free_from_discard(id);
 		} else {
-			lock_update_copy_and_discard(*father_block, id);
+			*err = lock_update_copy_and_discard(*father_block, id);
+			if (*err != DB_SUCCESS) {
+				return nullptr;
+			}
 		}
 	}
 
@@ -3636,8 +3662,11 @@ cannot_merge:
 				goto err_exit;
 			}
 			if (index->has_locking()) {
-				lock_update_merge_left(
+				err = lock_update_merge_left(
 					*merge_block, orig_pred, id);
+				if (UNIV_UNLIKELY(err != DB_SUCCESS)) {
+					goto err_exit;
+				}
 			}
 		}
 
@@ -3787,7 +3816,9 @@ cannot_merge:
 								&cursor2,
 								BTR_CREATE_FLAG,
 								false, mtr);
-			ut_a(err == DB_SUCCESS);
+			if (UNIV_UNLIKELY(err != DB_SUCCESS)) {
+				goto err_exit;
+			}
 
 			if (!compressed) {
 				btr_cur_compress_if_useful(&cursor2, false,
@@ -3795,8 +3826,11 @@ cannot_merge:
 			}
 
 			if (index->has_locking()) {
-				lock_update_merge_right(
+				err = lock_update_merge_right(
 					merge_block, orig_succ, block);
+				if (UNIV_UNLIKELY(err != DB_SUCCESS)) {
+					goto err_exit;
+				}
 			}
 		}
 	}
